#2147 fix sidebar not correctly overflowing when taller than page

--- a/src/definitions/modules/sidebar.less
+++ b/src/definitions/modules/sidebar.less
@@ -38,6 +38,7 @@
   -webkit-overflow-scrolling: touch;
 
   height: 100% !important;
+  max-height: 100%;
   border-radius: 0em !important;
   margin: 0em !important;
   overflow-y: auto !important;
@@ -70,7 +71,6 @@
 .ui.bottom.sidebar {
   width: 100% !important;
   height: auto !important;
-  overflow-y: visible !important;
 }
 .ui.top.sidebar {
   top: 0px !important;
